force-app/main/default/objects/RevuBuxAction__c/RevuBuxAction__c.object-meta.xml
<CustomObject>
    <label>Revu Bux Action</label>
    <nameField>
        <label>Revu Bux Action Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Revu Bux Actions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>