force-app/main/default/objects/RevuBuxAction__c/fields/DateItHappened__c.field-meta.xml
<CustomField>
    <fullName>DateItHappened__c</fullName>
    <defaultValue>today()</defaultValue>
    <label>Date It Happened</label>
    <type>Date</type>
</CustomField>