force-app/main/default/objects/RevuBuxAction__c/fields/DontNeedIt__c.field-meta.xml
<CustomField>
    <fullName>DontNeedIt__c</fullName>
    <defaultValue>&#39;Miscellaneous&#39;</defaultValue>
    <label>Dont Need It</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Payday__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>RevuCategories</valueSetName>
    </valueSet>
</CustomField>