force-app/main/default/objects/RevuBuxAction__c/fields/LifeOrDeathBucket__c.field-meta.xml
<CustomField>
    <fullName>LifeOrDeathBucket__c</fullName>
    <defaultValue>1500</defaultValue>
    <label>Life Or Death Bucket</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>