force-app/main/default/objects/RevuBuxAction__c/fields/Payday__c.field-meta.xml
<CustomField>
    <fullName>Payday__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payday</label>
    <type>Checkbox</type>
</CustomField>