force-app/main/default/objects/RevuBuxAction__c/fields/YouDontWantToKnowHowMuch__c.field-meta.xml
<CustomField>
    <fullName>YouDontWantToKnowHowMuch__c</fullName>
    <defaultValue>0</defaultValue>
    <label>You Dont Want To Know How Much</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>