force-app/main/default/objects/RevuBuxAction__c/fields/YouOnlyLiveOnceBucket__c.field-meta.xml
<CustomField>
    <fullName>YouOnlyLiveOnceBucket__c</fullName>
    <defaultValue>200</defaultValue>
    <label>You Only Live Once Bucket</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>