force-app/main/default/objects/RevuBuxAction__c/validationRules/AmountTooLow.validationRule-meta.xml
<ValidationRule>
    <fullName>AmountTooLow</fullName>
    <active>true</active>
    <errorConditionFormula>YouDontWantToKnowHowMuch__c &lt;= 0</errorConditionFormula>
    <errorDisplayField>YouDontWantToKnowHowMuch__c</errorDisplayField>
    <errorMessage>No really... how much?</errorMessage>
</ValidationRule>