force-app/main/default/objects/RevuBuxAction__c/validationRules/TimeWarped.validationRule-meta.xml
<ValidationRule>
    <fullName>TimeWarped</fullName>
    <active>true</active>
    <errorConditionFormula>DateItHappened__c &gt; today()</errorConditionFormula>
    <errorDisplayField>DateItHappened__c</errorDisplayField>
    <errorMessage>No, not back to the future.</errorMessage>
</ValidationRule>