force-app/main/default/objects/RevuBuxAction__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>DateItHappened__c</columns>
    <columns>NAME</columns>
    <columns>YouDontWantToKnowHowMuch__c</columns>
    <columns>DontNeedIt__c</columns>
    <columns>Payday__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>