force-app/main/default/objects/RevuBuxAction__c/listViews/RevuRecentBuxActions.listView-meta.xml
<ListView>
    <fullName>RevuRecentBuxActions</fullName>
    <columns>DateItHappened__c</columns>
    <columns>NAME</columns>
    <columns>YouDontWantToKnowHowMuch__c</columns>
    <columns>DontNeedIt__c</columns>
    <columns>Payday__c</columns>
    <filterScope>Mine</filterScope>
    <label>Revu Recent Bux Actions</label>
</ListView>